# libexpm

./: .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README  README.md  cleanup  expm.c  expm.h  lapack.h  rebuild  utils.c  utils.h
R/: Makefile  README  expm.r  expm_wrap.c  libexpm-package.r  normest.r  normest_wrap.c  test.r
R/tests/: normest.r
man/: expm.Rd  libexpm-package.Rd  normest.Rd
src/: Makefile  Makevars  expm.c  lapack.h  normest.c  utils.c  utils.h  wrappers.c
src/libexpm/: LICENSE  Makefile  libexpm.conf
src/libexpm/docs/html/: index.html
src/libexpm/src/: expm.c  lapack.h  libexpm.h  norm.f90  norm.h  normest.c  utils.c  utils.h
tests/: expm.r  normest.r
